[gd_scene load_steps=2 format=3 uid="uid://ba32k2066s13"]

[ext_resource type="Script" uid="uid://de2grehugld7s" path="res://Scenes/Menus/in_game_menu.gd" id="1_ra8e5"]

[node name="InGameMenu" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_ra8e5")

[node name="MenuPanel" type="Panel" parent="."]
visible = false
layout_mode = 1
offset_left = 1420.0
offset_right = 1920.0
offset_bottom = 1080.0

[node name="TrainerIDButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 27.0
offset_right = 475.0
offset_bottom = 117.0
theme_override_font_sizes/font_size = 50
text = "Trainer ID
"

[node name="BagButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 131.0
offset_right = 475.0
offset_bottom = 221.0
theme_override_font_sizes/font_size = 50
text = "Bag
"

[node name="PokemonTeamButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 235.0
offset_right = 475.0
offset_bottom = 325.0
theme_override_font_sizes/font_size = 50
text = "Pokemon
"

[node name="PokedexButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 339.0
offset_right = 475.0
offset_bottom = 429.0
theme_override_font_sizes/font_size = 50
text = "Pokedex
"

[node name="MapButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 443.0
offset_right = 475.0
offset_bottom = 533.0
theme_override_font_sizes/font_size = 50
text = "Map
"

[node name="SaveButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 547.0
offset_right = 475.0
offset_bottom = 637.0
theme_override_font_sizes/font_size = 50
text = "Save
"

[node name="LoadButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 651.0
offset_right = 475.0
offset_bottom = 741.0
theme_override_font_sizes/font_size = 50
text = "Load
"

[node name="DebugMenuButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 755.0
offset_right = 475.0
offset_bottom = 845.0
theme_override_font_sizes/font_size = 50
text = "Debug
"

[node name="OptionsButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 859.0
offset_right = 475.0
offset_bottom = 949.0
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="ExitGameButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 25.0
offset_top = 963.0
offset_right = 475.0
offset_bottom = 1053.0
theme_override_font_sizes/font_size = 50
text = "Exit Game
"

[node name="xButton" type="Button" parent="MenuPanel"]
layout_mode = 0
offset_left = 475.0
offset_right = 501.0
offset_bottom = 31.0
text = "x"

[connection signal="pressed" from="MenuPanel/PokemonTeamButton" to="." method="_on_pokemon_team_button_pressed"]
[connection signal="pressed" from="MenuPanel/xButton" to="." method="_on_x_button_pressed"]
